--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,8 @@
 @import "vendor/mq"; // v3.2.9
 @import "layout/grid";
 
+@import "mediabox-set1";
+
 // show the active breakpoint (_mq.scss)
 // ==================================================/
 @include mq-show-breakpoints;
