--- a/src/styles/_mediabox-set1.scss
+++ b/src/styles/_mediabox-set1.scss
@@ -22,7 +22,7 @@ h1 {
       border: 1px solid #000;
 
       > img {
-        max-width: 280px;
+        @extend %img--responsive;
       }
     }
 
