--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,18 +5,29 @@
 @import "vendor/andy";
 @import "utils/helpers";
 @import "base/reset";
-@import "vendor/normalize"; // v4.2.0
+@import "base/colors";
+@import "vendor/normalize"; 
 @import "base/fonts";
+@import "components/buttons";
 
-@import "vendor/mq"; // v3.2.9
+@import "vendor/mq"; 
 @import "layout/grid";
 
-@import "mediabox-set1";
+@import "mediabox1";
 
 // show the active breakpoint (_mq.scss)
 // ==================================================/
-@include mq-show-breakpoints;
+// @include mq-show-breakpoints;
 
 // show col-* grid borders (_grid.scss)
 // ==================================================/
 @include col-grid-border(#000);
+
+// temp
+body {
+  @extend %system_normal--300;
+}
+
+.item-id {
+  background-color: #ccc;
+}
