--- a/src/styles/_mediabox1.scss
+++ b/src/styles/_mediabox1.scss
@@ -19,6 +19,10 @@
 
     .mediabox101_extras {
       background-color: #2c2d32;
+
+      span {
+        color: #000;
+      }
     }
   }
 }
@@ -50,10 +54,21 @@
     @extend %padd--4;
     margin-top: 4px;
 
-    button {
+    span {
       float: right;
       margin-left: 4px;
+
+      &:hover > .mediabox101_btn_svg {
+        fill: #fff;
+      }
     }
+  }
+
+  .mediabox101_btn_svg {
+    @extend %display--inline-block;
+    width: 18px;
+    height: 18px;
+    vertical-align: middle;
   }
 }
 
@@ -73,6 +88,14 @@
 
     .mediabox102_extras {
       background-color: #2c2d32;
+    }
+
+    span {
+      color: #000;
+
+      &:hover > .mediabox102_btn_svg {
+        fill: #fff;
+      }
     }
   }
 }
@@ -98,7 +121,7 @@
       @extend %padd--4;
     }
 
-    > button {
+    span {      
       margin-top: 6px;
     }
   }
@@ -107,13 +130,19 @@
     @extend %padd--4;
 
     p {
-      display: inline-block;
+      @extend %display--inline-block;
     }
 
-    button {
+    span {      
       float: right;
       margin-right: 6px;
-
     }
+  }
+
+  .mediabox102_btn_svg {
+    @extend %display--inline-block;
+    width: 18px;
+    height: 18px;
+    vertical-align: middle;
   }
 }  
