--- a/index.bundle.css
+++ b/index.bundle.css
@@ -28,7 +28,7 @@ input [type="button"],
   margin: 0;
   padding: 0; }
 
-.btn1-01, .mediabox101 .mediabox101_img-holder, .mediabox101 .mediabox101_media-right, .mediabox101 .mediabox101_media-right h3, .mediabox101 .mediabox101_media-right p, .mediabox101 .mediabox101_extras, .mediabox102 .mediabox102_media-right, .mediabox102 .mediabox102_media-right h3, .mediabox102 .mediabox102_media-right p, .mediabox102 .mediabox102_extras {
+.btn1-01, .mediabox101 .mediabox101_img-holder, .mediabox101 .mediabox101_heading, .mediabox101 .mediabox101_media-right, .mediabox101 .mediabox101_media-right p, .mediabox101 .mediabox101_extras, .mediabox102 .mediabox102_heading, .mediabox102 .mediabox102_media-right, .mediabox102 .mediabox102_media-right p, .mediabox102 .mediabox102_extras {
   padding: 4px; }
 
 .mediabox101 .mediabox101_img-holder, .mediabox102 .mediabox102_img-holder {
@@ -813,9 +813,9 @@ input [type="button"],
     border: 1px solid #000; }
   .mediabox101 .mediabox101_media-right {
     background-color: #1c1d22; }
-    .mediabox101 .mediabox101_media-right h3 {
-      background-color: #343437;
-      color: #fff; }
+  .mediabox101 .mediabox101_heading {
+    background-color: #343437;
+    color: #fff; }
   .mediabox101 .mediabox101_extras {
     background-color: #2c2d32; }
     .mediabox101 .mediabox101_extras span {
@@ -834,10 +834,18 @@ input [type="button"],
   height: 18px;
   vertical-align: middle; }
 
+@media (min-width: 30em) {
+  .mediabox101 .mediabox101_media-left {
+    width: 30%;
+    float: left; }
+  .mediabox101 .mediabox101_media-right {
+    width: 70%;
+    float: left; } }
+
 .mediabox102 {
   background-color: #141416;
   color: #d5d5d5; }
-  .mediabox102 .mediabox102_media-right h3 {
+  .mediabox102 .mediabox102_heading {
     background-color: #343437;
     color: #fff; }
   .mediabox102 .mediabox102_extras {
@@ -858,6 +866,14 @@ input [type="button"],
   width: 18px;
   height: 18px;
   vertical-align: middle; }
+
+@media (min-width: 30em) {
+  .mediabox102 .mediabox102_media-left {
+    width: 30%;
+    float: left; }
+  .mediabox102 .mediabox102_media-right {
+    width: 70%;
+    float: left; } }
 
 [class|="col"] {
   position: relative;
